--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .game-board{
     width: 100%;
     height: 400px;
-    border-bottom: 10px solid green;
+    border-bottom: 50px solid green;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
@@ -34,7 +34,30 @@
 .cloud{
     width: 500px;
     position: absolute;
-    animation: cloud 20s infinite linear
+    animation: cloud 20s infinite linear;
+}
+
+.game-over{
+    visibility: hidden;
+    display: flex;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(65, 57, 57, 0.363)
+}
+
+.restart{
+    height: 60px;
+    width: 350px;
+    border-radius: 10px;
+    border: none;
+    font-size: 20px;
+    background-color: blue;
+    cursor: pointer;
 }
 
 @keyframes pipe-animations {
@@ -76,5 +99,20 @@
 
     to{
         right: 100%
+    }
+}
+
+@media (max-width: 620px){
+    .mario{
+        width: 110px;
+        position: absolute;
+        bottom: 0px;
+    }
+
+    .pipe{
+        position: absolute;
+        bottom: 0;
+        width: 50px;
+        animation: pipe-animations 1s infinite linear;
     }
 }
